--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   the title of the paper.  
 
 permalink: ':title/'
-baseurl:  "" # the subpath of your site, e.g. /blog
+baseurl:  "reproducible_website" # the subpath of your site, e.g. /blog
 url: "https://gchure.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # You can include social icons
