--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 permalink: ':title/'
 baseurl:  "reproducible_website" # the subpath of your site, e.g. /blog
-url: "https://gchure.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # You can include social icons
 site-twitter: #if your site has a twitter account, enter it here
