--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: > # this means to ignore newlines until "baseurl:"
   concise (1-sentence) summary of your project here. This can be as simple as
   the title of the paper.  
 
-permalink: ':title/'
-baseurl:  "reproducible_website" # the subpath of your site, e.g. /blog
+# permalink: ':title/'
+baseurl:  "reproducible_website/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # You can include social icons
