--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: > # this means to ignore newlines until "baseurl:"
   the title of the paper.  
 
 # permalink: ':title/'
-baseurl:  "reproducible_website/" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl:  "/reproducible_website" # the subpath of your site, e.g. /blog
+url: "/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # You can include social icons
 site-twitter: #if your site has a twitter account, enter it here
