Added a README and going to work on the tutorial on the Wiki

--- a/_data/people.yaml
+++ b/_data/people.yaml
@@ -1,19 +1,25 @@
-# This YAML data file contains information for each author of the work. You can
-# add additional fields to each person, but they must then be included in the
-# `people.md` file.
-
+# ##############################################################################
+# Authors List
+# ------------------------------------------------------------------------------
+# This YAML data file contains entry for each author involved in the work
+# This YAML data file contains information for each author of the work. The 
+# author list will be generated in the order in which they are listed below. 
+# You can  add additional fields to each person, but these will not show up
+# automatically and must then be included manually in the Liquid template code 
+# of the `page01_people.md` file.
+# ##############################################################################
 - author:
   name: Dr. Osophila
   link: "https://en.wikipedia.org/wiki/Drosophila"
   title: Postdoctoral Scholar
-  img: dr_osophila.png
+  img: dr_osophila.jpg
   institute: Bicoid Institute of Development
 
 - author:
   name: Dr. Melanie O'Gaster
   link: "https://en.wikipedia.org/wiki/Drosophila_melanogaster"
   title: Postdoctoral Scholar
-  img: melanogaster.png
+  img: melanogaster.jpg
   institute: French Flag Research Institute
 
 - author:
