--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -1,8 +1,19 @@
+# ##############################################################################
+# ABOUT
+# ------------------------------------------------------------------------------
+# This data file contains all information that will be displayed on the home
+# page of your website. The fields `title` and `authors` are necessary. These
+# keys cannot be changed or they will not be displayed on the website. 
+#
+# The remainder of the fileds can be changed to fit your needs. The field name
+# (e.g. abstract, summary, etc) Will appear with as H2 headings on the website.
+# The content below will appear 
+
 title: >
   Your Paper Title Here
 authors: >
   Author 1, Author 2, Author 3, Author 4
-abstract: >
+Abstract: >
   This is a general purpose website template for conveying your data, code, and
   overall scientific story to the general public! See the
   [GitHub](https://github.com/gchure/reproducible_website) for the actual code
@@ -10,7 +21,12 @@ abstract: >
   it. This is meant to be used in tandem with the [GitHup repository template for
   reproducible research](https://github.com/gchure/reproducible_research). The
   Rest of this website is filled with dummy text (my favorite, [Hiptser
-  Ipsum](https://hipsum.co/)) for demonstrative purposes.
+  Ipsum](https://hipsum.co/)) for demonstrative purposes. It can even include
+  math like
+
+
+  $$S = k_b\ln \Omega. \tag{1}$$
+
 
 
   Your abstract goes here.
@@ -29,7 +45,7 @@ abstract: >
   disrupt deep v ugh, banjo truffaut distillery flannel la croix copper mug. Af
   8-bit tattooed asymmetrical mumblecore swag direct trade iPhone disrupt
   exercitation mixtape.
-summary:  >
+Summary:  >
   A short summary of your work goes here. Think "significance statement".
   Nisi bushwick seitan et authentic aute, laboris blog sed in wayfarers lyft
   plaid ut. Id aesthetic venmo, palo santo aliqua photo booth blue bottle.
@@ -38,7 +54,7 @@ summary:  >
   Hashtag affogato chambray vaporware subway tile, kogi helvetica ea tacos sint
   brooklyn. Williamsburg waistcoat raclette seitan glossier messenger bag
   dolore ramps, flannel magna nisi hot chicken elit pariatur kale chips.
-acknowledgements: > 
+Acknowledgments: > 
   Who helped you? Share the love! Valeria Rivera, Destiny Roach, Alberto 
   Fernandez, Trenton Rowland, Sherlyn Frederick, Mallory Irwin, Jazmyn Cohen,
   Jaylene Page, Kelsey Hayes, Sonny Wilson, Roy Taylor, Ryleigh Daugherty.
