--- a/_data/code.yaml
+++ b/_data/code.yaml
@@ -1,51 +1,11 @@
-description: > 
-  This page should provide information of the computational environment used in
-  your work along with links to all of the code. Anything you want to describe
-  about the software, execution, etc. should go here. 
-environment: >
-  # Python Version
+- script:
+  name: script1.py
+  desc: >
+    Super fancy script which calcualate some complicated stuff with
+    well-documented code.
+- script:
+  name: script2.py
+  desc: >
+    Yet another script that does something-or-other.
 
-  CPython 3.6.7
-
-  IPython 7.1.1
-
-  # Package Versions
-  bokeh==1.0.4
-
-  fcsparser==0.2.0
-
-  numpy==1.14.2
-
-  matplotlib==3.0.1
-
-  scipy==1.1.0
-
-  seaborn==0.9.0
-
-  pandas==0.23.4
-
-  tqdm==4.28.1
-
-  pystan==2.18.0.0
-
-  python_frontmatter==0.4.5
-
-  PyYAML==5.1
-
-  
-  # System Information
-
-  compiler   : GCC 4.2.1 Compatible Clng 4.0.1 (tagss/RELEASE_401/final)
-
-  system     : Darwin
-
-  release    : 18.2.0
-
-  machine    : x86_64
-
-  processor  : i386
-  
-  CPU cores  : 4
-
-  interpreter: 64bit
 
