--- a/_data/figures.yaml
+++ b/_data/figures.yaml
@@ -1,40 +1,43 @@
 - fig:
   title: "Fig. 1: Paleo cardigan kombucha, pickled brunch shabby chic "
-  file: fig1.py
+  filename: script1.py
   desc:  Used to generate the figure1
   pic: fig1.png
   req:
     - ds: 
+      storage: remote
       title: Dataset 1
-      dataset: ds1.csv
+      link: "http://data.caltech.edu"
 
 - fig:
   title: "Fig. 2: Activated charcoal tilde kombucha. "
-  file: fig2.py
+  filename: script2.py
   desc: 
       Used to generate Figure 2, illustrating activated kombucha on tap.
   pic: fig2.png
   req:
     - ds:
       title: Kombucha tempura desconstructed measures
-      dataset: ds2.csv
+      storage: local 
+      link: dataset2.csv
     - ds: 
+      storage: local
       title: Gravitational wave lo-fi beats to chill and study to
-      dataset: ds2.csv
+      link: dataset2.csv
 
 - fig: 
   title: "Fig. 5: Sustainable pour-over VHS"
-  file: fig5.py
+  filename: script1.py
   desc:
         Used to generate Figure 5, 
   pic: fig3.png
   req:
     - ds:
       title: Summarized dataset 1
-      dataset: ds1.csv
+      storage: local
+      link: dataset1.csv
+
     - ds:
       title: Summarized dataset 2
-      dataset: ds2.csv
-    - ds:
-      title: Summarized dataset 3
-      dataset: ds3.csv 
+      storage: remote
+      link: "http://zenodo.org" 
