--- a/_data/about.yaml
+++ b/_data/about.yaml
@@ -18,7 +18,7 @@ Abstract: >
   overall scientific story to the general public! See the
   [GitHub](https://github.com/gchure/reproducible_website) for the actual code
   used to generate this website, along with lengthy documentation about how to use
-  it. This is meant to be used in tandem with the [GitHup repository template for
+  it. This is meant to be used in tandem with the [GitHub repository template for
   reproducible research](https://github.com/gchure/reproducible_research). The
   Rest of this website is filled with dummy text (my favorite, [Hiptser
   Ipsum](https://hipsum.co/)) for demonstrative purposes. It can even include
