--- a/_config.yml
+++ b/_config.yml
@@ -4,19 +4,19 @@ description: > # this means to ignore newlines until "baseurl:"
   concise (1-sentence) summary of your project here. This can be as simple as
   the title of the paper.  
 
-# permalink: ':title/'
+permalink: ':title/' # This declares the root of your website and shouldn't be touched.
 baseurl:  "" # the subpath of your site, In most cases this can be left blank
 url: "" # Base of your website.In most cases, this will be left blank
 
 # You can include social icons
 site-twitter: #if your site has a twitter account, enter it here
 social-github: RPGroup-PBoC # add your Github handle here.
-email: username@hostname.com
+social-email: username@hostname.com
 
 # If you are using google analytics to track website traffic, you can insert the
 # tracking key below. It will be automatically inserted into the header of every
 # website page
-analytics:
+# analytics:
 
 # You can include a logo for your work as a .png that is saved in the folder 
 # 'assets/img/'. If you want a logo to show up, put the filename of the logo here
